# esplay-base-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig
components/drivers/: CMakeLists.txt  Kconfig.projbuild
components/drivers/display/: disp_spi.c  display.c  display.h
components/drivers/input/: gamepad.c
components/drivers/storage/: sdcard.c
main/: CMakeLists.txt  component.mk  main.c
tools/esp32img/: Makefile  main.c
tools/mkfw/: Makefile  crc32.c  crc32.h  main.c  mkfw
tools/mkimg/: Makefile  esptool.py  main.c  pack.sh
